--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "MIDI synth using WebSockets",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Martin Friman",
   "license": "ISC",
